# back_make_your_burguer

./: .env-example  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yaml  pyproject.toml
back_myb/: manage.py
back_myb/myb_api/: asgi.py  settings.py  urls.py  wsgi.py
back_myb/myb_app/: apps.py  models.py  serializers.py  service_burgers.py  urls.py  viewsets.py
back_myb/myb_app/migrations/: 0001_initial.py  0002_alter_status_burguer_tipo.py  0003_alter_status_burguer_tipo.py
